--- a/inClassAssignments/SignMeUp/sign_me_up_startup.html
+++ b/inClassAssignments/SignMeUp/sign_me_up_startup.html
@@ -74,6 +74,65 @@
 
 		
 		// TODO: Real-time custom validation
+		document.getElementById('password').addEventListener("input", function() {
+			//console.log('somethings going on...');
+			let password = this.value;
+			//let password = document.getElementById('password').value;		when you forget to use the function in the code above
+			console.log(password);
+
+			const missing = [];
+
+			if (password.length < 8)
+				missing.push("8-character minimum");
+
+			let hasLower = /[a-z]/.test(password)
+			if (!hasLower)
+				missing.push("lower-case letter");
+
+			let hasUpper = /[A-Z]/.test(password)
+			if (!hasUpper)
+				missing.push("upper-case letter");
+
+			let hasNumber = /[0-9]/.test(password)
+			if (!hasNumber)
+				missing.push("Number");
+
+			let hasSpecial = /[!@#$%]/.test(password)
+			if (!hasSpecial)
+				missing.push("Special character (!, @, #, $, %)");
+
+			const username = document.getElementById('username').value;
+			if (password.includes(username)) {
+				missing.push("password cannot contain username")
+			}
+
+			let output = "";
+
+			if (missing.length > 0) {
+				output = "<strong>Missing: </strong>";
+				for (let i = 0; i < missing.length - 1; i++)
+					output += missing[i] + ", ";
+				output += missing[missing.length - 1];
+			}
+
+			let strength;
+			let color;
+			if (missing.length === 0) {
+				strength = "strong"
+				color = "green"
+			}
+			else {
+				strength = "weak";
+				color = "red"
+			}
+
+			output = "Password Strength: <span style='color: " + color + "'>" + strength + "</span><br> " + output;
+
+			document.getElementById('passwordMessage').innerHTML = output;
+
+		});
+
+
 		</script>
 	</body>
 </html>
